chore: #1290 Remove a lot of code smells (javasecurity:S5145) Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>